--- a/login.html
+++ b/login.html
@@ -77,7 +77,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Ia200yiR2psjjdF9txnEQX8AxWW/j6EQQmrMfkN6lAEYgC60QbMd57Cz0rXedcAQxYk6BcLf2gC3rldrPE2xzplsMjHwQcDymjGPN9XO/Rt4dZmDweHqUZXDLPIozkBN.eSiE/G1TNpION//nHzJPxz34ljH2DnXEtbnEAGmvZd4UspjaLqZD37+POScGTOTAlbmYgyVbIi34NGA2dd8D9OSU0n3G7TQ5PJLbqUmpXXDsWmvRie8Bv3TiHiAw9a80">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gcBrySRAJd10quq2m7KYkmQ/fYdshYB7/5HpPJBj1DR7NTSvLRbb0EIDY4MYTJ35wyPcsC3kBmS0Ot2XlJVG4jBcSBWdp11vJLPzsmpiSRrnSyENYkNiU65f8vt6pUP3.F+xBOtx0bCWquN7XeWkdd4GwbjhkVV/Fxm9XRRiqREEMTeQe3T0u+pBs9a31evdjeyn7Xkj+RIkeax/gw+2OzZ6smLfXaD0jODyYP1Ase67qZIUS9jHhavGA7weS7H/Y">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12"></div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -94,6 +94,9 @@
 </div>
 <div data-for="Contraseña" class="col-lg-6 col-md-12 col-sm-12 form-group">
 <input type="password" name="Contraseña" placeholder="Contraseña" data-form-field="Contraseña" class="form-control display-7" required="required" value="" id="Contraseña-form2-33">
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12">
+<p class="mbr-fonts-style display-7">¿Has olvidado la contraseña?</p>
 </div>
 <div class="col-md-auto col mbr-section-btn">
 <button type="submit" class="btn btn-primary display-4">ENTRAR</button>
@@ -157,7 +160,7 @@
 			</div>
 		</div>
 	</div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/t" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/d" style="color:#aaa;">The website</a> was created with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r" style="color:#aaa;">This web page</a> was designed with Mobirise theme</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
